# OncoFlow-Monitor

./: CMakeLists.txt  README.md
build_cov/: CMakeCache.txt  CTestTestfile.cmake  FrameSource.cpp.gcov  FrameSource.h.gcov  FrameViewer.cpp.gcov  FrameViewer.h.gcov  Makefile  access.h.gcov  advance.h.gcov  array.gcov  atomic.h.gcov  atomic_base.h.gcov  char_traits.h.gcov  cmake_install.cmake  constexpr_c_functions.h.gcov  construct_at.h.gcov  convert_to_integral.h.gcov  coverage.profdata  coverage2.profdata  coverage_raw.info  cxx_atomic_impl.h.gcov  data.h.gcov  distance.h.gcov  exchange.h.gcov  framedource_52196.profraw  frameviewer2_55339.profraw  frameviewer_52198.profraw  initializer_list.gcov  next.h.gcov  operations.h.gcov  pair.h.gcov  qanystringview.h.gcov  qarraydata.h.gcov  qarraydataops.h.gcov  qarraydatapointer.h.gcov  qatomic.h.gcov  qatomic_cxx11.h.gcov  qbasicatomic.h.gcov  qbytearray.h.gcov  qbytearrayalgorithms.h.gcov  (+33 more)
build_cov/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_cov/OncoFlowTestLib_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_cov/OncoFlowTestLib_autogen/RZ4CM6YYJ6/: moc_FrameViewer.cpp  moc_FrameViewer.cpp.d
build_cov/assets/: mock_studies.json
build_cov/tst_FrameSource_autogen/: deps
build_cov/tst_FrameSource_autogen/include/: tst_FrameSource.moc  tst_FrameSource.moc.d
build_cov/tst_FrameViewer_autogen/: deps  moc_predefs.h
build_cov/tst_FrameViewer_autogen/include/: tst_FrameViewer.moc  tst_FrameViewer.moc.d
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/models/: LogEntry.h  PipelineConfig.h  PipelineRun.h  Study.h
src/services/: FrameSource.cpp  FrameSource.h  HistoryService.cpp  HistoryService.h  PipelineController.cpp  PipelineController.h  PipelineWorker.cpp  PipelineWorker.h  StudyService.cpp  StudyService.h  ValidationService.cpp  ValidationService.h
src/utils/: JsonUtils.h
src/widgets/: ConfigPanel.cpp  ConfigPanel.h  FrameViewer.cpp  FrameViewer.h  HistoryPanel.cpp  HistoryPanel.h  LogPanel.cpp  LogPanel.h  RunSummaryDialog.cpp  RunSummaryDialog.h  StatusPanel.cpp  StatusPanel.h  StudyListWidget.cpp  StudyListWidget.h
tests/: TestHelpers.h  tst_ConfigPanel.cpp  tst_FrameSource.cpp  tst_FrameViewer.cpp  tst_HistoryPanel.cpp  tst_HistoryService.cpp  tst_JsonUtils.cpp  tst_LogPanel.cpp  tst_PipelineController.cpp  tst_PipelineWorker.cpp  tst_RunSummaryDialog.cpp  tst_StatusPanel.cpp  tst_StudyListWidget.cpp  tst_StudyService.cpp  tst_ValidationService.cpp
